test/error/MethodCallNotFound.fu
public static class Test
{
	public static bool Run()
	{
		Foo(); //ERROR: 'Foo' not found
		return true;
	}
}
